--- a/_mynotes/types.ipynb
+++ b/_mynotes/types.ipynb
@@ -2,258 +2,265 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Boolean type"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## `bool`\r\n",
-    "- immutable"
-   ],
-   "metadata": {}
+    "## `bool`\n",
+    "- immutable\n",
+    "- is subclass of int (True = 1, False = 0)\n",
+    "- True + True + 1 is 3\n",
+    "- True > False\n",
+    "- comparison operators work (==, !=, >, <, >=, <=)\n",
+    "- during conversion any non-zero object is evaluated as False (0, None, '', [], {}, (), set())\n",
+    "- logical operators: and, or, not\n",
+    "- casting other types to bool with bool(\"hello\")"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Numeric types"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## `int`\r\n",
+    "## `int`\n",
     "- immutable"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## `float`\r\n",
+    "## `float`\n",
     "- immutable"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## `complex`\r\n",
-    "`complex([real[, imag]])`\r\n",
-    "\r\n",
+    "## `complex`\n",
+    "`complex([real[, imag]])`\n",
+    "\n",
     "- immutable"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "complex(2,1)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(2+1j)"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "complex(2,1)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Iterator types"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Generator types"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Sequence types"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## `list`\r\n",
-    "- squence data type\r\n",
-    "- mutable\r\n",
-    "- usually contains sequence of homogenius objects\r\n",
-    "- sequence unpacking works for list (on the right side)\r\n",
-    "- usually accessed by iterating\r\n",
+    "## `list`\n",
+    "- squence data type\n",
+    "- mutable\n",
+    "- usually contains sequence of homogenius objects\n",
+    "- sequence unpacking works for list (on the right side)\n",
+    "- usually accessed by iterating\n",
     "- implements common sequence operations"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## `tuple`\r\n",
-    "- ordered sequence\r\n",
-    "- immutable\r\n",
-    "- tuple can contain object that is mutable\r\n",
-    "- usually contains sequence of heterogenious objects\r\n",
-    "- sequence unpacking works for tuples (on the right side)\r\n",
+    "## `tuple`\n",
+    "- ordered sequence\n",
+    "- immutable\n",
+    "- tuple can contain object that is mutable\n",
+    "- usually contains sequence of heterogenious objects\n",
+    "- sequence unpacking works for tuples (on the right side)\n",
     "- usually accessed by unpacking"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## `range`"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Binary sequence types"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## `bytes`"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## `bytearray`"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## `memoryview`"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Text sequence types"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## `str`\r\n",
-    "- ordered\r\n",
-    "- immutable\r\n",
-    "- iterable\r\n",
+    "## `str`\n",
+    "- ordered\n",
+    "- immutable\n",
+    "- iterable\n",
     "- can be represented as UTF-8 (default for Python 3) unicode code points (`''.decode()`) or encoded to bytes (`''.encode()` or `b''`)"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Mapping types"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## `dict`\r\n",
-    "- associative array\r\n",
-    "- indexed by keys not numbers\r\n",
-    "- keys are ordered\r\n",
-    "- keys must be of immutable type (string, integer, float, tuples with only immutable types, frozenset)\r\n",
-    "- values are mutable\r\n",
-    "- keys are unique\r\n",
+    "## `dict`\n",
+    "- associative array\n",
+    "- indexed by keys not numbers\n",
+    "- keys are ordered\n",
+    "- keys must be of immutable type (string, integer, float, tuples with only immutable types, frozenset)\n",
+    "- values are mutable\n",
+    "- keys are unique\n",
     "- dict is represented as hash-table where keys are hashed and values are not"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Set types"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## `set`\r\n",
-    "- unordered\r\n",
-    "- mutable\r\n",
-    "- collection of hashable objects\r\n",
-    "- used for membership testing\r\n",
-    "- used for removing duplicates\r\n",
-    "- used for matehmatical operations\r\n",
-    "- no indexing, no slicing\r\n"
-   ],
-   "metadata": {}
+    "## `set`\n",
+    "- unordered\n",
+    "- mutable\n",
+    "- collection of hashable objects\n",
+    "- used for membership testing\n",
+    "- used for removing duplicates\n",
+    "- used for matehmatical operations\n",
+    "- no indexing, no slicing\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "## `frozenset`\r\n",
+    "## `frozenset`\n",
     "- immutable"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# ----------------------------"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## `namedtuple`"
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "d1ae3af205e27dfcf2138a3e341f35afb8a31389c942549ba24941a596005a09"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.6 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.9.6",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
-  },
-  "interpreter": {
-   "hash": "d1ae3af205e27dfcf2138a3e341f35afb8a31389c942549ba24941a596005a09"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
