--- a/oop/data_hiding.ipynb
+++ b/oop/data_hiding.ipynb
@@ -2,90 +2,69 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Information hiding\r\n",
-    "- data hiding is isolating the client from a part of program implementation\r\n",
-    "- process of hiding the details of an object or function\r\n",
-    "- hiding of these details results in an abstraction\r\n",
-    "- information hiding effectively decouples the calling code from the internal workings of the object or function being called, which makes it possible to change the hidden portions without having to also change the calling code\r\n",
-    "- some objects in the module are kept internal, invisible, and inaccessible to the user\r\n",
-    "- encapsulation is a common technique programmers use to implement information hiding\r\n",
+    "# Information hiding\n",
+    "- data hiding is isolating the client from a part of program implementation\n",
+    "- process of hiding the details of an object or function\n",
+    "- hiding of these details results in an abstraction\n",
+    "- information hiding effectively decouples the calling code from the internal workings of the object or function being called, which makes it possible to change the hidden portions without having to also change the calling code\n",
+    "- some objects in the module are kept internal, invisible, and inaccessible to the user\n",
+    "- encapsulation is a common technique programmers use to implement information hiding\n",
     "- class data members can be hidden by using double underscore prefix - `__hidden_data`"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "class Temp:\r\n",
-    "    temp = 25\r\n",
-    "    __temp = 35\r\n",
-    "\r\n",
-    "t = Temp()\r\n",
-    "print(t.temp)\r\n",
+    "class Temp:\n",
+    "    temp = 25\n",
+    "    __temp = 35\n",
+    "\n",
+    "t = Temp()\n",
+    "print(t.temp)\n",
     "print(t._Temp__temp)  # name mangling prevents direct access to t.__temp"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "25\n",
-      "35\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "class Temp:\r\n",
-    "    temp = 25\r\n",
-    "    __temp = 35\r\n",
-    "\r\n",
-    "t = Temp()\r\n",
+    "class Temp:\n",
+    "    temp = 25\n",
+    "    __temp = 35\n",
+    "\n",
+    "t = Temp()\n",
     "print(t.__temp)  # this data is hidden"
-   ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "AttributeError",
-     "evalue": "'Temp' object has no attribute '__temp'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7676/215058996.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTemp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__temp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Temp' object has no attribute '__temp'"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "d1ae3af205e27dfcf2138a3e341f35afb8a31389c942549ba24941a596005a09"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.6 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.9.6",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
-  },
-  "interpreter": {
-   "hash": "d1ae3af205e27dfcf2138a3e341f35afb8a31389c942549ba24941a596005a09"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
